--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
-    "dotenv": "^17.2.3"
+    "circomlib": "^2.0.5",
+    "dotenv": "^17.2.3",
+    "snarkjs": "^0.7.5"
   }
 }
