--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "circomlib": "^2.0.5",
     "dotenv": "^17.2.3",
+    "express": "^5.1.0",
     "snarkjs": "^0.7.5"
   }
 }
